= Change Log

== 一

- Added Dark Theme
- Switched to coroutines and completely removed RxJava
- Switched to view binding
- changed version names to counting in japanese because new firebase libs can not
handle emojis.
- Switched to app bundles

== 🥝

- Moved lumberyard out of prod release
- Added adaptive icons
- Added analytics around push notifications
- Pushes can now be seen if the app is open
- Fixed lint issues

== 🍦

- Updated UI for cards
- Updated app colors
- Adding Play Store Pushing

== 🍇

- added FCM

== 🐟

- update gradle plugins and dependencies
- fixed crashlytics not reporting
- added `RxJavaPlugins.setErrorHandler { Timber.e(it) }` to avoid crashing app when two errors are
thrown in the chain.

== 🥚

- update to kotlin/java, and prepping for new apis

== 🍩

- hotfix for moving from red shift, to heroku

== 🌶

- pull to refresh implemented, and update caching.

== 🍌

- updated app colors
- updated app icon
- updated app name

== 🍎

- Initial Release