@@ -3,3 +3,5 @@ android.enableJetifier=true
 android.enableR8.fullMode=true
 
 org.gradle.jvmargs=-Xmx4G -XX:MaxPermSize=256m
+
+kotlin.code.style=official
