@@ -44,5 +44,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="why_are_trails_closed">Why are trails closed</string>
+    <string name="why_are_trails_closed">Why are trails closed?</string>
 </resources>
