@@ -1,5 +1,10 @@
 = Change Log
 
+== 二
+
+- setup for next api, app pointed at gcp function that will become live when new api is out.
+- Added overflow menu with "about" and "why are trails closed" items.
+
 == 一
 
 - Added Dark Theme
